settings work first link

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -16,6 +16,13 @@ main {
     align-items: center;
 }
 
+main-popup {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 h1,
 h2,
 h3 {
